zokrates_cli/examples/compile_errors/generics/incompatible.zok
def foo<P>(field[P] a, field[P] b) -> field:
	return 42

def main() -> field:
	return foo([1, 2], [1])